# RESTinCurl

./: CMakeLists.txt  Doxyfile  LICENSE  Readme.md  vcpkg.json.for-windows
cmake_scripts/: external-projects.cmake
doc/: reference.md  tutorial.md
include/restincurl/: restincurl.h
tests/: CMakeLists.txt  TmpFile.h  app_test.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  general_tests.cpp  queue_tests.cpp  target_test.cpp  upload_test.cpp
tests/coro-asio/: CMakeLists.txt  coro-asio.cpp
tests/coro-unifex/: CMakeLists.txt  coro-unifex.cpp
